make section1 ,section2

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,8 +1,14 @@
 
-// Body
-$body-bg: #f5f8fa;
+
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+@font-face {
+  font-family: 'Geometria Thin';
+  font-weight: normal;
+  font-style: normal;
+}
