--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,38 +1,27 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 // Variables
 @import "variables";
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+@import "Common/Header.scss";
+@import "Content/Sections/section1.scss";
+@import "Content/Sections/section2.scss";
+@import "Content/Sections/section3.scss";
+html, body {
+  font-family: 'Geometria Light';
+  font-size: 16px;
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+  margin: 0;
+  display: block;
 }
-
- html, body {
-   background-color: #fff;
-   color: #636b6f;
-   font-family: 'Raleway', sans-serif;
-   font-weight: 100;
-   height: 100vh;
-   margin: 0;
- }
-
-
 
 .flex-center {
   align-items: center;
   display: flex;
   justify-content: center;
 }
-
-
-
-
-
-
-
 
 
